--- a/assets/scss/_event.scss
+++ b/assets/scss/_event.scss
@@ -10,6 +10,7 @@
 .single_event{
     
     & .event_image{
+        height: 450px;
         overflow: hidden;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
